manifests/manifest/yamls/notifier.yaml
# Source: notifier/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifier-service
  labels:
    app: notifier
    chart: notifier-3.7.1
    release: devtron
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: app
      protocol: TCP
      name: app
  selector:
    app: notifier
---
# Source: notifier/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier
  labels:
    app: notifier
    chart: notifier-3.7.1
    release: devtron
spec:
  selector:
    matchLabels:
      app: notifier
      release: devtron
  replicas: 1
  minReadySeconds: 60
  template:
    metadata:
      labels:
        app: notifier
        release: devtron
    spec:
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      containers:
        - name: notifier
          image: quay.io/devtron/notifier:3b7b5d33-74-2197
          imagePullPolicy: IfNotPresent
          ports:
            - name: app
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: "0.5"
              memory: 600Mi
            requests:
              cpu: "0.2"
              memory: 100Mi
          volumeMounts: []
      volumes: []
  revisionHistoryLimit: 3
